--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
    <h1 id="title">Survey Form</h1>
    <p id="description">Kindly fill this form. Filling the form means you've read our terms and conditions and agree to them.</p>
    <form id="survey-form">
-      <label for="name" id="name-label"><p>Tijani Bamidele</p></label>
+      <label for="name" id="name-label"><p>FULL NAME <i>(Surname first)</i></p></label>
       <input type="text" required name="name" id="name" placeholder="Enter Your Name"></input>
-      <label for="name" id="email-label"><p>tijaniemmanuelb@gmail.com</p></label>
+      <label for="name" id="email-label"><p>EMAIL ADDRESS</p></label>
       <input type="email" required name="email" id="email" placeholder="Enter Your Email"></input>
-      <label for="number" id="number-label"><p>08137088334</p></label>
+      <label for="number" id="number-label"><p>PHONE NUMBER</p></label>
       <input type="number" min="11" max="11" required name="number" id="number" placeholder="Enter Your Phone Number"></input>
       <div class="dropdown-div">
          <p>What is your current skill level?</p>
+         <div class="select-class">
          <select required name="dropdown" id="dropdown">
             <option>Select Your Level</option>
             <option value"1">Novice</option>
@@ -27,7 +28,7 @@
             <option value="3">Senior</option>
             <option value="4">Legend</option>
             <option value="5">Professional</option>
-         </select></div>
+         </select></div></div>
       </div>
       <div class="radio-div">
          <p>Do you find it comfortable studying online?</p>
